--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,48 @@
 <resources>
     <string name="app_name">Test2</string>
+    <string name="convert">convert</string>
+    <string name="retry">Retry</string>
+    <string name="empty_et">Fill this field!</string>
+    <string name="flags">flags</string>
+    <string-array name="Currency">
+        <item>CAD</item>
+        <item>HKD</item>
+        <item>ISK</item>
+        <item>PHP</item>
+        <item>DKK</item>
+        <item>HUF</item>
+        <item>CZK</item>
+        <item>RON</item>
+        <item>SEK</item>
+        <item>IDR</item>
+        <item>INR</item>
+        <item>BRL</item>
+        <item>RUB</item>
+        <item>HRK</item>
+        <item>JPY</item>
+        <item>THB</item>
+        <item>CHF</item>
+        <item>EUR</item>
+        <item>MYR</item>
+        <item>BGN</item>
+        <item>TRY</item>
+        <item>CNY</item>
+        <item>NOK</item>
+        <item>NZD</item>
+        <item>ZAR</item>
+        <item>USD</item>
+        <item>MXN</item>
+        <item>SGD</item>
+        <item>AUD</item>
+        <item>ILS</item>
+        <item>KRW</item>
+        <item>PLN</item>
+    </string-array>
+
+    <string name="main_channel">Main Channel</string>
+    <string name="main_channel_description">This is the notification main channel</string>
+    <string name="notification_title">Exchange updated</string>
+    <string name="notification_body_1">Exchange Rate increased</string>
+    <string name="notification_body_2">Exchange Rate decreased</string>
+    <string name="notification_body_3">Nothing new. Stay safe.</string>
 </resources>
